# schemas.py
@@ -48,11 +48,26 @@ class UserLoginSchema(Schema):
     user_name = fields.Str(required=True)
     user_password = fields.Str(required=True, load_only=True)               
 
-
+'''
 class BooktagSchema(Schema):
     message = fields.Str()
     book = fields.Nested(PlainBookSchema)
     tag = fields.Nested(PlainTagSchema)
-
+'''
+    
 class MultipartFileSchema(Schema):
     file = fields.Raw(required=True)                     # metadata={"type": "file"}
+
+
+class BookSearchQueryArgs(Schema):
+    title = fields.Str(required=False)
+    release_year = fields.Int(required=False)
+    sort = fields.Str(required=False)
+    order = fields.Str(required=False)
+
+
+class TagSearchQueryArgs(Schema):
+    name = fields.Str(required=False)
+
+class UserSearchQueryArgs(Schema):
+    name = fields.Str(required=False)
